@@ -19,7 +19,7 @@
 
     <dependencies>
         <dependency force="true" org="com.vaadin" name="vaadin" rev="6+" conf="build-vaadin6->default"/>
-        <dependency force="true" org="com.vaadin" name="vaadin" rev="7+" conf="build-vaadin7,vaadin7->default"/>
+        <dependency force="true" org="com.vaadin" name="vaadin" rev="7.0.0.alpha3" conf="build-vaadin7,vaadin7->default"/>
         <dependency force="true" org="javax.servlet" name="servletapi" rev="3.0" conf="build->default"/>
         <dependency force="true" org="javax.persistence" name="persistence-api" rev="2.0" conf="build->default"/>
         <dependency force="true" org="javax.validation" name="validation-api" rev="1.0.0.GA" conf="build->default"/>
